# rusty_microphone

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.org  make-web.sh
benches/: transforms.rs
src/: audio.rs  correlation.rs  emscripten_api.rs  gui.rs  lib.rs  main.rs  model.rs  pitch.rs  signal.rs  transforms.rs  wasm_api.rs
web/: index.html  main.js  style.css
